# rpi-rgb-matrix

./: config.ini  pyproject.toml  tasks.py
impl/: controller_62x32.py  controller_v3.py
impl/apps_v2/: spotify_player.py  spotify_player_32.py  weather.py
impl/modules/: weather_module.py
tests/: test_config.py
