[tool.poetry]
name = "rpi-spotify-matrix-display"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.2.0"
numpy = "^1.26.4"
requests = "^2.31.0"
spotipy = "^2.23.0"
rgbmatrixemulator = "^0.11.0"
pyowm = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
